@@ -72,9 +72,10 @@ public class ContentGroupDao {
 			try {
 				pm = PMF.get().getPersistenceManager();
 				Query q = pm.newQuery(ContentGroup.class);
-				q.setFilter("applicationId == applicationIdParam && deleted == deletedParam");
-				q.declareParameters("Long applicationIdParam, Boolean deletedParam");
-				return (List<ContentGroup>) q.execute(applicationId, new Boolean(false));
+				q.setFilter("applicationId == applicationIdParam && deleted == deletedParam && enabled == enabledParam");
+				q.declareParameters("Long applicationIdParam, Boolean deletedParam, Boolean enabledParam");
+				return (List<ContentGroup>) q.execute(applicationId,
+						Boolean.valueOf(false), Boolean.valueOf(true));
 			} finally {
 				if (pm != null) {
 					pm.close();
@@ -86,7 +87,7 @@ public class ContentGroupDao {
 		}
 	}
 
-	 List<ContentGroup> getContentGroupsByUserId(Long userId) {
+	List<ContentGroup> getContentGroupsByUserId(Long userId) {
 		try {
 			if (LOGGER.isLoggable(Level.INFO))
 				LOGGER.info("Entering getContentGroupsByUserId");
@@ -110,7 +111,7 @@ public class ContentGroupDao {
 		}
 	}
 
-	 List<ContentGroup> getContentGroupsByAccountId(Long userId) {
+	List<ContentGroup> getContentGroupsByAccountId(Long userId) {
 		try {
 			if (LOGGER.isLoggable(Level.INFO))
 				LOGGER.info("Entering getContentGroupsByAccountId");
@@ -134,7 +135,7 @@ public class ContentGroupDao {
 		}
 	}
 
-	 void deleteContentGroup(Long id, Long timeUpdatedMs,
+	void deleteContentGroup(Long id, Long timeUpdatedMs,
 			Long timeUpdatedTimeZoneOffsetMs) {
 		try {
 			if (LOGGER.isLoggable(Level.INFO))
@@ -167,7 +168,7 @@ public class ContentGroupDao {
 		}
 	}
 
-	 void restoreContentGroup(Long id, Long timeUpdatedMs,
+	void restoreContentGroup(Long id, Long timeUpdatedMs,
 			Long timeUpdatedTimeZoneOffsetMs) {
 		try {
 			if (LOGGER.isLoggable(Level.INFO))
@@ -200,7 +201,7 @@ public class ContentGroupDao {
 		}
 	}
 
-	 void updateContentGroup(ContentGroup contentGroup) {
+	void updateContentGroup(ContentGroup contentGroup) {
 		try {
 			if (LOGGER.isLoggable(Level.INFO))
 				LOGGER.info("Entering updateContentGroup");
@@ -210,7 +211,7 @@ public class ContentGroupDao {
 				pm = PMF.get().getPersistenceManager();
 				ContentGroup _contentGroup = pm.getObjectById(
 						ContentGroup.class, contentGroup.getId());
-				//do not update applicationId
+				// do not update applicationId
 				_contentGroup.setDescription(contentGroup.getDescription());
 				_contentGroup.setName(contentGroup.getName());
 				_contentGroup.setStartDateIso8601(contentGroup
